# lib/httpServer/index.js
@@ -260,10 +260,10 @@ class HttpServer {
 
         this.app.post('/operator/registerStudent', async (req, res) => {
             console.log("Register Student Route Accessed");
-            const { studentID, password } = req.body;
+            const { User_ID, password } = req.body;
 
             try {
-                const result = await operator.Student_register(studentID, password);
+                const result = await operator.User_register(User_ID, password);
                 res.status(201).json(result);
             } catch (error) {
                 res.status(400).json({ error: error.message });
@@ -271,16 +271,16 @@ class HttpServer {
         });
 
         this.app.post('/operator/attendance', (req, res) => {
-            const { studentId, eventId, timestamp, signature } = req.body;
+            const { User_ID, eventId, timestamp, signature } = req.body;
         
-            if (!studentId || !eventId || !timestamp || !signature) {
+            if (!User_ID || !eventId || !timestamp || !signature) {
                 return res.status(400).json({ message: "Missing required fields" });
             }
         
             const attendanceTransaction = {
-                id: `${studentId}_${eventId}_${timestamp}`,  
+                id: `${User_ID}_${eventId}_${timestamp}`,  
                 data: {
-                    studentId: studentId,
+                    User_ID: User_ID,
                     eventId: eventId,
                     timestamp: timestamp,
                     signature: signature
